<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".EditNoteFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_note"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:layout_marginHorizontal="20dp"/>

    <EditText
        android:id="@+id/editNoteET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_note"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="8dp"/>

    <Button
        android:id="@+id/editBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_margin="8dp"/>

</LinearLayout>