<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".NotePadFragment">

    <TextView
        android:id="@+id/generateCountTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/count_note"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:layout_marginHorizontal="20dp"/>

    <EditText
        android:id="@+id/textNoteET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_note"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/addBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_margin="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        tools:listitem="@layout/list_item"/>

</LinearLayout>