<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/countTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="8dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/textNoteTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_note"
            android:layout_margin="5dp" />

        <CheckBox
            android:id="@+id/checkBoxNoteCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/dateCreateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_create"
        android:layout_gravity="end"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"/>

</LinearLayout>